Release history for Test-File-ShareDir

{{$NEXT}}

0.2.0 2011-04-07T21:10:54Z
 - Rereleased as 0.2.0 to signify backwards incompatible changes introduced
   in 0.1.2

0.1.2 2011-04-07T21:08:05Z
 [Features]
 - Adds support for dist/package sharedirs. See synopsis for syntax.

 [Packaging]
 - Remove need for @Filter.
 - Rework Changes for CPAN::Changes.

 [Tests]
 - Added CPAN::Changes tests.
 - 01 Basics files moved to 01_files and 01 Basic is reformatted to match.
 - Added 02_distdir and 02_files to test for dist feature.

0.1.1 2011-03-10T16:35:13Z
 - Overhauled the internals to make it easier to work on.
 - Refactored code into an object.
 - No externally visible changes.
 - Slightly more strict, but just to stop you doing stupid things.
 - Module Loading is now slightly lazier.

0.1.0 2011-02-21T12:42:47Z
 - First version, released on an unsuspecting world.
 - Presently only supports module share-dirs.
