@@ -9,10 +9,10 @@ package Test::File::ShareDir;
 
     use Test::More;
 
-    use FindBin;
+    # use FindBin; optional
 
     use Test::File::ShareDir
-        -root => "$FindBin::Bin/../",
+        # -root => "$FindBin::Bin/../" # optional,
         -share => {
             -module => { 'My::Module' => 'share/MyModule' }
             -dist   => { 'My-Dist'    => 'share/somefolder' }
@@ -35,6 +35,66 @@ This module only has support for creating 'new' style sharedirs and are NOT comp
 For this reason, unless you have File::ShareDir 1.00 or later installed, this module will not be usable by you.
 
 =cut
+
+=head1 IMPORTING
+
+=head2 -root
+
+This parameter is the prefix the other paths are relative to.
+
+If this parameter is not specified, it defaults to the Current Working Directory ( CWD ).
+
+In versions prior to C<0.3.0>, this value was mandatory.
+
+The rationale behind using CWD as the default value is as follows.
+
+=over 4
+
+=item * Most users of this module are likely to be using it to test distributions
+
+=item * Most users of this module will be using it in C<$project/t/> to load files from C<$project/share/>
+
+=item * Most CPAN tools run tests with CWD = $project
+
+=back
+
+Therefor, defaulting to CWD is a reasonably sane default for most people, but where it is not it can
+still be overridden.
+
+  -root => "$FindBin::Bin/../" # resolves to project root from t/ regardless of Cwd.
+
+=head2 -share
+
+This parameter is mandatory, and contains a hashref containing the data that explains what directories you want shared.
+
+  -share =>  { ..... }
+
+=head3 -module
+
+C<-module> contains a hashref mapping Module names to path names for module_dir style sharedirs.
+
+  -share => {
+    -module => { 'My::Module' => 'share/mymodule/', }
+  }
+
+  ...
+
+  module_dir('My::Module')
+
+Notedly, it is a hashref, which means there is a limitation of one sharedir per module. This is simply because having more than one sharedir per module makes no sense at all.
+
+=head3 -dist
+
+C<-dist> contains a hashref mapping Distribution names to path names for dist_dir style sharedirs. The same limitation applied to C<-module> applies here.
+
+  -share => {
+    -dist => { 'My-Dist' => 'share/mydist' }
+  }
+  ...
+  dist_dir('My-Dist')
+
+=cut
+
 
 use File::ShareDir 1.00 qw();
 
